--- a/index.html
+++ b/index.html
@@ -516,6 +516,14 @@
          box-shadow: 0 0 0 2px rgba(0, 63, 127, 0.5); /* Darker blue focus ring */
     }
 
+    /* Style for the WhatsApp image icon */
+    .whatsapp-button-container .whatsapp-btn img {
+        width: 1.5rem; /* Equivalent to w-6 */
+        height: 1.5rem; /* Equivalent to h-6 */
+        margin-right: 0.5rem; /* Equivalent to mr-2 */
+        vertical-align: middle; /* Align with text */
+    }
+
 
   </style>
 </head>
@@ -823,9 +831,7 @@
 
   <div class="whatsapp-button-container">
       <a href="https://wa.me/34631449197" class="whatsapp-btn" target="_blank" aria-label="Chatea con nosotros por WhatsApp">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-6 h-6 mr-2 align-middle fill-current text-white">
-          <path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-93-25.7l-6.7-4-69.8 18.3L100 360.6l-4.1-6.9c-18.5-31.4-28.2-67.7-28.2-109.2c0-114.8 93.4-208.3 208.3-208.3c41.5 0 81.5 15.3 111.7 44.5c30.3 29.3 47.9 68.1 47.9 109.4c0 114.8-93.4 208.3-208.3 208.3zm95.3-95.1c-7.1-3.7-42.8-21.4-49.2-23.8c-6.5-2.4-11.2-3.6-16 3.6s-18.9 23.8-23.2 28.6c-4.3 4.9-8.6 5.6-16 1.8s-30-11-57.1-35.3c-22.9-20.7-38.3-46.2-42.7-53.6c-4.3-7.5-0.4-11.5 3.4-15.2c3.4-3.4 7.1-8.5 10.6-12.7c3.7-4.3 4.9-7.1 7.1-11.2c2.4-4.3 1.2-8.1-0.6-11.2s-16-38.2-21.9-46.5c-5.9-8.4-11.8-7.1-16-7.3s-10.6-2.4-16-2.4s-13.2 3.6-20.3 10.6c-7.1 7.1-18.9 17.7-18.9 42.8s19.2 49.6 21.9 53.1c2.9 3.7 38.2 58.2 92.3 82.6c11.2 4.9 20.9 7.8 28 10c14.6 4.5 27.9 3.8 38.4 2.3c11.2-1.5 32.4-13.2 36.9-25.4c4.5-12.2 4.5-22.6 3.2-24.5c-1.3-1.9-4.7-3-10-5.9z"/>
-        </svg>
+        <img src="123.png" alt="Icono de WhatsApp" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/24x24/25D366/ffffff?text=WA';">
         <span class="lang-es">Chatea por WhatsApp</span>
         <span class="lang-ca">Xateja per WhatsApp</span>
         <span class="lang-va">Chateja per WhatsApp</span>
